- Fix memory fragmention problem which could lead to web server processes   growing much more than they should. (bug #11344?)